@@ -2,6 +2,7 @@ from twisted.application import service, internet
 
 from txjsonrpc.netstring import jsonrpc
 
+
 class Example(jsonrpc.JSONRPC):
     """An example object to be published."""
 
@@ -12,6 +13,7 @@ class Example(jsonrpc.JSONRPC):
     def jsonrpc_add(self, a, b):
         """Return sum of arguments."""
         return a + b
+
 
 factory = jsonrpc.RPCFactory(Example())
 application = service.Application("Example JSON-RPC Server")
