@@ -2,6 +2,7 @@ from twisted.application import service, internet
 
 from txjsonrpc.netstring import jsonrpc
 
+
 class Example(jsonrpc.JSONRPC):
     """An example object to be published."""
 
@@ -9,17 +10,20 @@ class Example(jsonrpc.JSONRPC):
         """Return all passed args."""
         return x
 
+
 class Testing(jsonrpc.JSONRPC):
 
     def jsonrpc_getList(self):
         """Return a list."""
         return [1,2,3,4,'a','b','c','d']
 
+
 class Math(jsonrpc.JSONRPC):
 
     def jsonrpc_add(self, a, b):
         """Return sum of arguments."""
         return a + b
+
 
 # Note that this is a different approach that that used by 
 # twisted.web[2].xmlrpc. Here, we are putting the subhandlers on the 
@@ -34,5 +38,3 @@ factory.addIntrospection()
 application = service.Application("Example JSON-RPC Server")
 jsonrpcServer = internet.TCPServer(7080, factory)
 jsonrpcServer.setServiceParent(application)
-
-
